--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <h1>Verloka Vadim</h1>
             <!--<nav id="nav">
                 <ul>
-                    
+
                 </ul>
             </nav>-->
         </header>
@@ -87,7 +87,7 @@
                                 </a>
                             </li>
                             <li>
-                                <a href="https://ogycode.github.io/WallpaperChanger/" class="button alt">Learn More</a>
+                                <a href="https://changer.pp.ua/" class="button alt">Learn More</a>
                             </li>
                         </ul>
                     </section>
@@ -119,7 +119,7 @@
                         <p>Application to play on a virtual piano without a human. Play like a pro, whether professional.</p>
                         <ul class="actions">
                             <li>
-                                <a href="https://ogycode.github.io/VirtualPianoLiar/" class="button alt">Learn More</a>
+                                <a href="https://verloka.github.io/VirtualPianoLiar/" class="button alt">Learn More</a>
                             </li>
                         </ul>
                     </section>
@@ -151,7 +151,7 @@
                         <p>Widget for demonstration on desktop the weather on your location</p>
                         <ul class="actions">
                             <li>
-                                <a href="https://ogycode.github.io/WeatherWidget/" class="button alt">Learn More</a>
+                                <a href="https://verloka.github.io/WeatherWidget/" class="button alt">Learn More</a>
                             </li>
                         </ul>
                     </section>
