Added new project.

--- a/index.html
+++ b/index.html
@@ -49,18 +49,38 @@
             </section>
             <!--WORKS-->
             <div class="row">
+                <!--Tariscope-->
+                <div class="6u 12u(narrower)">
+                        <section class="box special">
+                            <span class="image featured">
+                                <img src="images/items/tariscope.jpg" alt="" />
+                            </span>
+                            <h3>Tariscope <img src="images/nonfree.png" title="Commercial" style="margin-top: 10px; cursor: pointer; opacity: .5;" width="16" height="16" alt="Commercial" /></h3>
+                            <p>The Tariscope is a call accounting software for companies that have PBX (VoIP PBX) systems.</p>
+                            <ul class="actions">
+                                <li>
+                                    <a href="http://tariscope.com/en/buy" class="button alt">Buy</a>
+                                </li>
+                                <li>
+                                    <a href="http://tariscope.com/en/" class="button alt">Learn More</a>
+                                </li>
+                            </ul>
+                        </section>
+                    </div>
+
                 <!--Jesus Password-->
                 <div class="6u 12u(narrower)">
                     <section class="box special">
                         <span class="image featured">
                             <img src="images/items/jpassword.jpg" alt="" />
                         </span>
-                        <h3>Jesus Password</h3>
+                        <h3>Jesus Password <img src="images/free.png" title="Non-commercial" style="margin-top: 10px; cursor: pointer; opacity: .5;" width="16" height="16" alt="Non-commercial" /></h3>
                         <p>Password Manager for your devices with cloud synchronization</p>
                         <ul class="actions">
                             <li>
                                 <a href='//www.microsoft.com/store/apps/9nblggh691x4?ocid=badge'>
-                                    <img style="vertical-align: middle; height: 3em;" src='https://assets.windowsphone.com/85864462-9c82-451e-9355-a3d5f874397a/English_get-it-from-MS_InvariantCulture_Default.png'
+                                    <img style="vertical-align: middle; height: 3em;"
+                                        src='https://assets.windowsphone.com/85864462-9c82-451e-9355-a3d5f874397a/English_get-it-from-MS_InvariantCulture_Default.png'
                                         alt='English badge' />
                                 </a>
                             </li>
@@ -77,12 +97,13 @@
                         <span class="image featured">
                             <img src="images/items/wallpaper.jpg" alt="" />
                         </span>
-                        <h3>Wallpaper Changer</h3>
+                        <h3>Wallpaper Changer <img src="images/free.png" title="Non-commercial" style="margin-top: 10px; cursor: pointer; opacity: .5;" width="16" height="16" alt="Non-commercial" /></h3>
                         <p>Service for automatically change the wallpaper on desktop (pictures from Bing).</p>
                         <ul class="actions">
                             <li>
                                 <a href='//www.microsoft.com/store/apps/9MZ0ZKR55F9G?ocid=badge'>
-                                    <img style="vertical-align: middle; height: 3em;" src='https://assets.windowsphone.com/85864462-9c82-451e-9355-a3d5f874397a/English_get-it-from-MS_InvariantCulture_Default.png'
+                                    <img style="vertical-align: middle; height: 3em;"
+                                        src='https://assets.windowsphone.com/85864462-9c82-451e-9355-a3d5f874397a/English_get-it-from-MS_InvariantCulture_Default.png'
                                         alt='English badge' />
                                 </a>
                             </li>
@@ -99,7 +120,7 @@
                         <span class="image featured">
                             <img src="images/items/default.jpg" alt="" />
                         </span>
-                        <h3>Income&Expenses</h3>
+                        <h3>Income&Expenses <img src="images/free.png" title="Non-commercial" style="margin-top: 10px; cursor: pointer; opacity: .5;" width="16" height="16" alt="Non-commercial" /></h3>
                         <p>An application to control your personal budget and budget your family</p>
                         <ul class="actions">
                             <li>
