Update name and add picture for Income$Expenses

--- a/404.html
+++ b/404.html
@@ -1,5 +1,6 @@
 ﻿<!DOCTYPE HTML>
 <html lang="en">
+
 <head prefix="og: http://ogp.me/ns#">
     <title>Verloka Vadim</title>
     <meta charset="utf-8" />
@@ -17,18 +18,19 @@
     <meta property="og:locale:alternate" content="uk-UA" />
     <meta property="og:locale:alternate" content="ru-RU" />
     <meta property="og:image" content="images/og.jpg" />
-	<link href="https://fonts.googleapis.com/css?family=Courgette" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Courgette" rel="stylesheet">
     <script language="JavaScript">
     </script>
-	<style>
-        html, body {
+    <style>
+        html,
+        body {
             background: black;
             height: 100%;
             margin: 0;
         }
 
         .text404 {
-			font-family: 'Courgette', cursive;
+            font-family: 'Courgette', cursive;
             font-size: 2em;
             color: whitesmoke;
             background: black;
@@ -39,11 +41,13 @@
             left: 50%;
             transform: translate(-50%, 0);
         }
-	</style>
+    </style>
 </head>
+
 <body>
-  <p class="text404">
+    <p class="text404">
         404 go to <a href="index.html">home page</a>
     </p>
 </body>
+
 </html>
