--- a/index.html
+++ b/index.html
@@ -2,14 +2,14 @@
 <html lang="en">
 
 <head prefix="og: http://ogp.me/ns#">
-    <title>Verloka Vadim</title>
+    <title>Vadym Verloka</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
     <link rel="stylesheet" href="assets/css/main.css" />
     <!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
 
-    <meta property="og:title" content="Verloka Vadim" />
+    <meta property="og:title" content="Vadym Verloka" />
     <meta property="og:url" content="https://verloka.github.io/" />
     <meta property="og:description" content="Personal webpage." />
     <meta property="og:determiner" content="the" />
@@ -24,7 +24,7 @@
     <div id="page-wrapper">
         <!-- Header -->
         <header id="header" class="alt">
-            <h1>Verloka Vadim</h1>
+            <h1>Vadym Verloka</h1>
             <!--<nav id="nav">
                 <ul>
 
@@ -33,7 +33,7 @@
         </header>
         <!-- Banner -->
         <section id="banner">
-            <h2>Verloka Vadim</h2>
+            <h2>Vadym Verloka</h2>
             <p>I am an artist and this is my art. Enjoy!</p>
         </section>
         <!-- Main -->
@@ -51,22 +51,25 @@
             <div class="row">
                 <!--Tariscope-->
                 <div class="6u 12u(narrower)">
-                        <section class="box special">
-                            <span class="image featured">
-                                <img src="images/items/tariscope.jpg" alt="" />
-                            </span>
-                            <h3>Tariscope <img src="images/nonfree.png" title="Commercial" style="margin-top: 10px; cursor: pointer; opacity: .5;" width="16" height="16" alt="Commercial" /></h3>
-                            <p>The Tariscope is a call accounting software for companies that have PBX (VoIP PBX) systems.</p>
-                            <ul class="actions">
-                                <li>
-                                    <a href="http://tariscope.com/en/buy" class="button alt">Buy</a>
-                                </li>
-                                <li>
-                                    <a href="http://tariscope.com/en/" class="button alt">Learn More</a>
-                                </li>
-                            </ul>
-                        </section>
-                    </div>
+                    <section class="box special">
+                        <span class="image featured">
+                            <img src="images/items/tariscope.jpg" alt="" />
+                        </span>
+                        <h3>Tariscope <img src="images/nonfree.png" title="Commercial"
+                                style="margin-top: 10px; cursor: pointer; opacity: .5;" width="16" height="16"
+                                alt="Commercial" /></h3>
+                        <p>The Tariscope is a call accounting software for companies that have PBX (VoIP PBX) systems.
+                        </p>
+                        <ul class="actions">
+                            <li>
+                                <a href="http://tariscope.com/en/buy" class="button alt">Buy</a>
+                            </li>
+                            <li>
+                                <a href="http://tariscope.com/en/" class="button alt">Learn More</a>
+                            </li>
+                        </ul>
+                    </section>
+                </div>
 
                 <!--Jesus Password-->
                 <div class="6u 12u(narrower)">
@@ -74,7 +77,9 @@
                         <span class="image featured">
                             <img src="images/items/jpassword.jpg" alt="" />
                         </span>
-                        <h3>Jesus Password <img src="images/free.png" title="Non-commercial" style="margin-top: 10px; cursor: pointer; opacity: .5;" width="16" height="16" alt="Non-commercial" /></h3>
+                        <h3>Jesus Password <img src="images/free.png" title="Non-commercial"
+                                style="margin-top: 10px; cursor: pointer; opacity: .5;" width="16" height="16"
+                                alt="Non-commercial" /></h3>
                         <p>Password Manager for your devices with cloud synchronization</p>
                         <ul class="actions">
                             <li>
@@ -97,7 +102,9 @@
                         <span class="image featured">
                             <img src="images/items/wallpaper.jpg" alt="" />
                         </span>
-                        <h3>Wallpaper Changer <img src="images/free.png" title="Non-commercial" style="margin-top: 10px; cursor: pointer; opacity: .5;" width="16" height="16" alt="Non-commercial" /></h3>
+                        <h3>Wallpaper Changer <img src="images/free.png" title="Non-commercial"
+                                style="margin-top: 10px; cursor: pointer; opacity: .5;" width="16" height="16"
+                                alt="Non-commercial" /></h3>
                         <p>Service for automatically change the wallpaper on desktop (pictures from Bing).</p>
                         <ul class="actions">
                             <li>
@@ -118,13 +125,18 @@
                 <div class="6u 12u(narrower)">
                     <section class="box special">
                         <span class="image featured">
-                            <img src="images/items/default.jpg" alt="" />
+                            <img src="images/items/income.jpg" alt="" />
                         </span>
-                        <h3>Income&Expenses <img src="images/free.png" title="Non-commercial" style="margin-top: 10px; cursor: pointer; opacity: .5;" width="16" height="16" alt="Non-commercial" /></h3>
+                        <h3>Income&Expenses <img src="images/free.png" title="Non-commercial"
+                                style="margin-top: 10px; cursor: pointer; opacity: .5;" width="16" height="16"
+                                alt="Non-commercial" /></h3>
                         <p>An application to control your personal budget and budget your family</p>
                         <ul class="actions">
                             <li>
                                 <a href="#" class="button alt">coming soon</a>
+                            </li>
+                            <li>
+                                <a href="https://income.pp.ua/" class="button alt">Learn More</a>
                             </li>
                         </ul>
                     </section>
@@ -137,7 +149,7 @@
         <footer id="footer">
             <ul class="copyright">
                 <li>&copy;
-                    <a href="https://verloka.github.io/">Verloka Vadim.</a> All rights reserved.</li>
+                    <a href="https://verloka.github.io/">Vadym Verloka.</a> All rights reserved.</li>
                 <li>Design:
                     <a href="http://html5up.net">HTML5 UP</a>
                 </li>
