Add for the Income&Expenses a link to MS Store.

--- a/index.html
+++ b/index.html
@@ -133,7 +133,11 @@
                         <p>An application to control your personal budget and budget your family</p>
                         <ul class="actions">
                             <li>
-                                <a href="#" class="button alt">coming soon</a>
+                                <a href='//www.microsoft.com/store/apps/9PH2MP1W0138?ocid=badge'>
+                                    <img style="vertical-align: middle; height: 3em;"
+                                        src='https://assets.windowsphone.com/85864462-9c82-451e-9355-a3d5f874397a/English_get-it-from-MS_InvariantCulture_Default.png'
+                                        alt='English badge' />
+                                </a>
                             </li>
                             <li>
                                 <a href="https://income.pp.ua/" class="button alt">Learn More</a>
