--- a/404.html
+++ b/404.html
@@ -26,28 +26,47 @@
         body {
             background: black;
             height: 100%;
+			width: 100%;
             margin: 0;
         }
-
-        .text404 {
-            font-family: 'Courgette', cursive;
-            font-size: 2em;
-            color: whitesmoke;
-            background: black;
-            align-content: center;
-
-            position: fixed;
-            top: 10%;
-            left: 50%;
-            transform: translate(-50%, 0);
-        }
+		
+		body {
+			position: relative;
+		}
+		
+		.center {
+			position: absolute;
+			top: 0;
+			bottom: 0;
+			left: 0;
+			right: 0;
+			width: 640px;
+			height: 480px;
+			margin: auto;
+		}
+		
+		.noselect {
+			-webkit-touch-callout: none;
+			-webkit-user-select: none; 
+			-khtml-user-select: none; 
+			-moz-user-select: none; 
+			-ms-user-select: none; 
+			user-select: none;
+			pointer-events: none; 
+		}
     </style>
 </head>
 
-<body>
-    <p class="text404">
-        404 go to <a href="index.html">home page</a>
-    </p>
+<body class="vin">
+	<div class="center noselect ">
+		<iframe src="https://coub.com/embed/225bzy?muted=false&autostart=false&originalSize=true&startWithHD=true" 
+				allowfullscreen 
+				frameborder="0" 
+				width="640" 
+				height="480" 
+				allow="autoplay"></iframe>
+	</div>
+	<script async src="https://c-cdn.coub.com/embed-runner.js"></script>
 </body>
 
 </html>
