--- a/index.html
+++ b/index.html
@@ -1,16 +1,12 @@
 ﻿<!DOCTYPE HTML>
-<html lang="en">
-
-<head prefix="og: http://ogp.me/ns#">
+<html>
+<head>
     <title>Vadym Verloka</title>
     <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
     <link rel="stylesheet" href="assets/css/main.css" />
-    <!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
-
     <meta property="og:title" content="Vadym Verloka" />
-    <meta property="og:url" content="https://verloka.github.io/" />
+    <meta property="og:url" content="https://verloka.com/" />
     <meta property="og:description" content="Personal webpage." />
     <meta property="og:determiner" content="the" />
     <meta property="og:type" content="website" />
@@ -19,155 +15,35 @@
     <meta property="og:locale:alternate" content="ru-RU" />
     <meta property="og:image" content="images/og.jpg" />
 </head>
-
-<body class="landing">
+<body class="is-preload">
     <div id="page-wrapper">
-        <!-- Header -->
-        <header id="header" class="alt">
-            <h1>Vadym Verloka</h1>
-            <!--<nav id="nav">
-                <ul>
+        <header id="header" class="alt"></header>
+        <nav id="menu"></nav>
 
-                </ul>
-            </nav>-->
-        </header>
-        <!-- Banner -->
+        <!--content-->
         <section id="banner">
-            <h2>Vadym Verloka</h2>
-            <p>I am an artist and this is my art. Enjoy!</p>
-        </section>
-        <!-- Main -->
-        <section id="main" class="container">
-
-            <section class="box special">
-                <header class="major">
-                    <h2>Finished and unfinished projects</h2>
-                    <p>
-                        This is main
-                    </p>
-                </header>
-            </section>
-            <!--WORKS-->
-            <div class="row">
-                <!--Tariscope-->
-                <div class="6u 12u(narrower)">
-                    <section class="box special">
-                        <span class="image featured">
-                            <img src="images/items/tariscope.jpg" alt="" />
-                        </span>
-                        <h3>Tariscope <img src="images/nonfree.png" title="Commercial"
-                                style="margin-top: 10px; cursor: pointer; opacity: .5;" width="16" height="16"
-                                alt="Commercial" /></h3>
-                        <p>The Tariscope is a call accounting software for companies that have PBX (VoIP PBX) systems.
-                        </p>
-                        <ul class="actions">
-                            <li>
-                                <a href="http://tariscope.com/en/buy" class="button alt">Buy</a>
-                            </li>
-                            <li>
-                                <a href="http://tariscope.com/en/" class="button alt">Learn More</a>
-                            </li>
-                        </ul>
-                    </section>
+            <div class="inner">
+                <h1>Vadym Verloka</h1>
+                <div class="content">
+                    <p>Im an artist and this is my art.</p>
+                    <ul class="actions special">
+                        <li><a href="https://verloka.com/portfolio" class="button large next">My Work</a></li>
+                    </ul>
                 </div>
-
-                <!--Jesus Password-->
-                <div class="6u 12u(narrower)">
-                    <section class="box special">
-                        <span class="image featured">
-                            <img src="images/items/jpassword.jpg" alt="" />
-                        </span>
-                        <h3>Jesus Password <img src="images/free.png" title="Non-commercial"
-                                style="margin-top: 10px; cursor: pointer; opacity: .5;" width="16" height="16"
-                                alt="Non-commercial" /></h3>
-                        <p>Password Manager for your devices with cloud synchronization</p>
-                        <ul class="actions">
-                            <li>
-                                <a href='//www.microsoft.com/store/apps/9nblggh691x4?ocid=badge'>
-                                    <img style="vertical-align: middle; height: 3em;"
-                                        src='https://assets.windowsphone.com/85864462-9c82-451e-9355-a3d5f874397a/English_get-it-from-MS_InvariantCulture_Default.png'
-                                        alt='English badge' />
-                                </a>
-                            </li>
-                            <li>
-                                <a href="https://jpassword.pp.ua/" class="button alt">Learn More</a>
-                            </li>
-                        </ul>
-                    </section>
-                </div>
-
-                <!--Wallpaper Changer-->
-                <div class="6u 12u(narrower)">
-                    <section class="box special">
-                        <span class="image featured">
-                            <img src="images/items/wallpaper.jpg" alt="" />
-                        </span>
-                        <h3>Wallpaper Changer <img src="images/free.png" title="Non-commercial"
-                                style="margin-top: 10px; cursor: pointer; opacity: .5;" width="16" height="16"
-                                alt="Non-commercial" /></h3>
-                        <p>Service for automatically change the wallpaper on desktop (pictures from Bing).</p>
-                        <ul class="actions">
-                            <li>
-                                <a href='//www.microsoft.com/store/apps/9MZ0ZKR55F9G?ocid=badge'>
-                                    <img style="vertical-align: middle; height: 3em;"
-                                        src='https://assets.windowsphone.com/85864462-9c82-451e-9355-a3d5f874397a/English_get-it-from-MS_InvariantCulture_Default.png'
-                                        alt='English badge' />
-                                </a>
-                            </li>
-                            <li>
-                                <a href="https://changer.pp.ua/" class="button alt">Learn More</a>
-                            </li>
-                        </ul>
-                    </section>
-                </div>
-
-                <!--Income$Expenses-->
-                <div class="6u 12u(narrower)">
-                    <section class="box special">
-                        <span class="image featured">
-                            <img src="images/items/income.jpg" alt="" />
-                        </span>
-                        <h3>Income&Expenses <img src="images/free.png" title="Non-commercial"
-                                style="margin-top: 10px; cursor: pointer; opacity: .5;" width="16" height="16"
-                                alt="Non-commercial" /></h3>
-                        <p>An application to control your personal budget and budget your family</p>
-                        <ul class="actions">
-                            <li>
-                                <a href='//www.microsoft.com/store/apps/9PH2MP1W0138?ocid=badge'>
-                                    <img style="vertical-align: middle; height: 3em;"
-                                        src='https://assets.windowsphone.com/85864462-9c82-451e-9355-a3d5f874397a/English_get-it-from-MS_InvariantCulture_Default.png'
-                                        alt='English badge' />
-                                </a>
-                            </li>
-                            <li>
-                                <a href="https://income.pp.ua/" class="button alt">Learn More</a>
-                            </li>
-                        </ul>
-                    </section>
-                </div>
-
-                <!--END WORKS-->
             </div>
         </section>
-        <!-- Footer -->
-        <footer id="footer">
-            <ul class="copyright">
-                <li>&copy;
-                    <a href="https://verloka.github.io/">Vadym Verloka.</a> All rights reserved.</li>
-                <li>Design:
-                    <a href="http://html5up.net">HTML5 UP</a>
-                </li>
-            </ul>
-        </footer>
+
+        <div id="BotomContent"></div>
     </div>
-    <!-- Scripts -->
+
     <script src="assets/js/jquery.min.js"></script>
-    <script src="assets/js/jquery.dropotron.min.js"></script>
-    <script src="assets/js/jquery.scrollgress.min.js"></script>
-    <script src="assets/js/skel.min.js"></script>
+    <script src="assets/js/loader.js"></script>
+    <script src="assets/js/jquery.scrollex.min.js"></script>
+    <script src="assets/js/jquery.scrolly.min.js"></script>
+    <script src="assets/js/jquery.selectorr.min.js"></script>
+    <script src="assets/js/browser.min.js"></script>
+    <script src="assets/js/breakpoints.min.js"></script>
     <script src="assets/js/util.js"></script>
-    <!--[if lte IE 8]><script src="assets/js/ie/respond.min.js"></script><![endif]-->
     <script src="assets/js/main.js"></script>
 </body>
-
 </html>
