Added the github link.

--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
             <div class="inner">
                 <h1>Vadym Verloka</h1>
                 <div class="content">
-                    <p>Im an artist and this is my art.</p>
+                    <p>Im an artist and this is my art</p>
                     <ul class="actions special">
-                        <li><a href="https://verloka.com/portfolio" class="button large next">My Work</a></li>
+                        <li><a href="https://verloka.com/portfolio" class="button large next">My Portfolio</a></li>
                     </ul>
                 </div>
             </div>
