--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -24,8 +24,8 @@
         <section id="main" class="wrapper style2">
             <div class="inner">
                 <header class="major special">
-                    <h1>My Work</h1>
-                    <p>My personal released projects, as well as projects of which I was a part.</p>
+                    <h1>My Art</h1>
+                    <p>My personal projects, as well as projects in which I participated or are part of</p>
                 </header>
                 <ul class="tabs">
                     <li>
