--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -31,6 +31,7 @@
                     <li>
                         <h3>All</h3>
                         <div class="gallery">
+							<a href="https://verloka.com/projects/rozmovy.html"><img src="../images/app/sp.jpg" alt="Tariscope" /></a>
                             <a href="http://tariscope.com/"><img src="../images/app/ts.jpg" alt="Tariscope" /></a>
                             <a href="https://jpassword.pp.ua/"><img src="../images/app/jp.jpg" alt="Jesus Password" /></a>
                             <a href="https://changer.pp.ua/"><img src="../images/app/wc.jpg" alt="Wallpaper Changer" /></a>
@@ -40,6 +41,7 @@
                     <li>
                         <h3>Commercial</h3>
                         <div class="gallery">
+							<a href="https://verloka.com/projects/rozmovy.html"><img src="../images/app/sp.jpg" alt="Tariscope" /></a>
                             <a href="http://tariscope.com/"><img src="../images/app/ts.jpg" alt="Tariscope" /></a>
                         </div>
                     </li>
