Updated the portfolio page.

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -31,9 +31,9 @@
                     <li>
                         <h3>All</h3>
                         <div class="gallery">
-							<a href="https://verloka.com/projects/rozmovy.html"><img src="../images/app/sp.jpg" alt="Tariscope" /></a>
+							<a href="https://verloka.com/projects/rozmovy"><img src="../images/app/sp.jpg" alt="Tariscope" /></a>
                             <a href="http://tariscope.com/"><img src="../images/app/ts.jpg" alt="Tariscope" /></a>
-							<a href="https://verloka.com/projects/exchnage.html"><img src="../images/app/ex.jpg" alt="Exchange CMS" /></a>
+							<a href="https://verloka.com/projects/exchange"><img src="../images/app/ex.jpg" alt="Exchange CMS" /></a>
                             <a href="https://jpassword.pp.ua/"><img src="../images/app/jp.jpg" alt="Jesus Password" /></a>
                             <a href="https://changer.pp.ua/"><img src="../images/app/wc.jpg" alt="Wallpaper Changer" /></a>
                             <a href="https://income.pp.ua/"><img src="../images/app/ie.jpg" alt="Income&Expenses" /></a>
@@ -42,17 +42,17 @@
                     <li>
                         <h3>Commercial</h3>
                         <div class="gallery">
-							<a href="https://verloka.com/projects/rozmovy.html"><img src="../images/app/sp.jpg" alt="Tariscope" /></a>
+							<a href="https://verloka.com/projects/rozmovy"><img src="../images/app/sp.jpg" alt="Tariscope" /></a>
                             <a href="http://tariscope.com/"><img src="../images/app/ts.jpg" alt="Tariscope" /></a>
                         </div>
                     </li>
                     <li>
                         <h3>Non commercial</h3>
                         <div class="gallery">
-							<a href="https://verloka.com/projects/exchnage.html"><img src="../images/app/ex.jpg" alt="Exchange CMS" /></a>
+							<a href="https://verloka.com/projects/exchange"><img src="../images/app/ex.jpg" alt="Exchange CMS" /></a>
+							<a href="https://income.pp.ua/"><img src="../images/app/ie.jpg" alt="Income&Expenses" /></a>
                             <a href="https://jpassword.pp.ua/"><img src="../images/app/jp.jpg" alt="Jesus Password" /></a>
-                            <a href="https://changer.pp.ua/"><img src="../images/app/wc.jpg" alt="Wallpaper Changer" /></a>
-                            <a href="https://income.pp.ua/"><img src="../images/app/ie.jpg" alt="Income&Expenses" /></a>
+							<a href="https://changer.pp.ua/"><img src="../images/app/wc.jpg" alt="Wallpaper Changer" /></a>
                         </div>
                     </li>
                 </ul>
