--- a/projects/rozmovy/index.html
+++ b/projects/rozmovy/index.html
@@ -4,7 +4,7 @@
     <title>Rozmovy | Vadym Verloka</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-    <link rel="stylesheet" href="../assets/css/main.css" />
+    <link rel="stylesheet" href="../../assets/css/main.css" />
     <meta property="og:title" content="Vadym Verloka" />
     <meta property="og:url" content="https://verloka.com/" />
     <meta property="og:description" content="Personal webpage." />
@@ -13,7 +13,7 @@
     <meta property="og:locale" content="en-US" />
     <meta property="og:locale:alternate" content="uk-UA" />
     <meta property="og:locale:alternate" content="ru-RU" />
-    <meta property="og:image" content="../images/og.jpg" />
+    <meta property="og:image" content="../../images/og.jpg" />
 </head>
 <body class="is-preload">
     <div id="page-wrapper">
@@ -25,10 +25,10 @@
             <div class="inner">
                 <header class="major special">
                     <h1>Rozmovy</h1>
-                    <p>Speech Recognition Software</p>
+                    <p>Speech Recognition SaaS Solution</p>
                 </header>
-                <a href="#" class="image main"><img src="../images/app/spb.jpg" alt="" /></a>
-                <p>The application is primarily intended for contact centers for the purpose of increasing productivity and indicators of the quality of customer service. The main feature of the application is speech recognition (currently only American English). This feature allows you to fire employees who listen to calls. Instead, the application will do this and translate into text.</p>
+                <a href="#" class="image main"><img src="../../images/app/spb.jpg" alt="" /></a>
+                <p>The solution is primarily intended for contact centers for the purpose of increasing productivity and indicators of the quality of customer service. The main feature of the solution is speech recognition (currently American English, German and Russian). This feature allows you to fire employees who listen to calls. Instead, the solution will do this and translate into text.</p>
                 <h4>Other equally important functions</h4>
 				<ul>
 						<li>Reporting, including report designer.</li>
@@ -74,14 +74,14 @@
     </div>
 
     <!-- Scripts -->
-    <script src="../assets/js/jquery.min.js"></script>
-    <script src="../assets/js/loader.js"></script>
-    <script src="../assets/js/jquery.scrollex.min.js"></script>
-    <script src="../assets/js/jquery.scrolly.min.js"></script>
-    <script src="../assets/js/jquery.selectorr.min.js"></script>
-    <script src="../assets/js/browser.min.js"></script>
-    <script src="../assets/js/breakpoints.min.js"></script>
-    <script src="../assets/js/util.js"></script>
-    <script src="../assets/js/main.js"></script>
+    <script src="../../assets/js/jquery.min.js"></script>
+    <script src="../../assets/js/loader.js"></script>
+    <script src="../../assets/js/jquery.scrollex.min.js"></script>
+    <script src="../../assets/js/jquery.scrolly.min.js"></script>
+    <script src="../../assets/js/jquery.selectorr.min.js"></script>
+    <script src="../../assets/js/browser.min.js"></script>
+    <script src="../../assets/js/breakpoints.min.js"></script>
+    <script src="../../assets/js/util.js"></script>
+    <script src="../../assets/js/main.js"></script>
 </body>
 </html>
