Fixed an error.

--- a/projects/exchange/index.html
+++ b/projects/exchange/index.html
@@ -28,7 +28,7 @@
                     <p>Q&A Engine</p>
                 </header>
                 <a href="#" class="image main"><img src="../../images/app/exc.jpg" alt="" /></a>
-                <p>Exchnage CMS is a stunning, professional, and flexible social questions and answers .NET application specially designed for Online Communities, Niche Questions and Answers Websites, Marketing Websites, Developers Websites, or any kind of Social Communities.</p>
+                <p>Exchange CMS is a stunning, professional, and flexible social questions and answers .NET application specially designed for Online Communities, Niche Questions and Answers Websites, Marketing Websites, Developers Websites, or any kind of Social Communities.</p>
                 <h4>Important functions</h4>
 				<ul>
 					<li>Adaptive design.</li>
