Updated the Swipe Land link

--- a/projects/happyfarm/index.html
+++ b/projects/happyfarm/index.html
@@ -29,7 +29,7 @@
                 </header>
                 <a href="#" class="image main"><img src="../../images/app/swlhd.png" alt="" /></a>
                 <p>Game for Android on the Unity engine. The implementation of the already classic game mechanics - Match-3. The app is now available on Google Play.</p>
-                <center><a href="https://google.com"><img src="../../images/google-play-badge.png" alt="" width="256"/></a></center>				
+                <center><a href="https://play.google.com/store/apps/details?id=com.verloka.swipeland.happyfarm"><img src="../../images/google-play-badge.png" alt="" width="256"/></a></center>				
             </div>
         </section>
 
