--- a/404.html
+++ b/404.html
@@ -50,10 +50,10 @@
 </head>
 <body onclick='document.getElementsByTagName("audio")[0].play();'>
 	<video class="center noselect" autoplay loop muted>
-		<source src="media/404.mp4" type="video/mp4">
+		<source src="http://verloka.com/media/404.mp4" type="video/mp4">
 	</video>
 	<audio>
-		<source src="media/404.mp3">
+		<source src="http://verloka.com/media/404.mp3">
 	</audio>
 </body>
 </html>
