Added Aspire Core

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -31,7 +31,8 @@
                     <li>
                         <h3>All</h3>
                         <div class="gallery">
-							<a href="https://verloka.com/projects/rozmovy/"><img src="../images/app/sp.jpg" alt="Tariscope" /></a>
+							<a href="https://verloka.com/projects/aspirecore/"><img src="../images/app/ac.jpg" alt="Aspire Core" /></a>
+							<a href="https://verloka.com/projects/rozmovy/"><img src="../images/app/sp.jpg" alt="Rozmovy" /></a>
                             <a href="https://verloka.com/projects/tariscope/"><img src="../images/app/ts.jpg" alt="Tariscope" /></a>
 							<a href="https://verloka.com/projects/exchange/"><img src="../images/app/ex.jpg" alt="Exchange CMS" /></a>
                             <a href="https://jpassword.pp.ua/"><img src="../images/app/jp.jpg" alt="Jesus Password" /></a>
@@ -43,7 +44,8 @@
                     <li>
                         <h3>Commercial</h3>
                         <div class="gallery">
-							<a href="https://verloka.com/projects/rozmovy/"><img src="../images/app/sp.jpg" alt="Tariscope" /></a>
+							<a href="https://verloka.com/projects/aspirecore/"><img src="../images/app/ac.jpg" alt="Aspire Core" /></a>
+							<a href="https://verloka.com/projects/rozmovy/"><img src="../images/app/sp.jpg" alt="Rozmovy" /></a>
                             <a href="https://verloka.com/projects/tariscope/"><img src="../images/app/ts.jpg" alt="Tariscope" /></a>
                         </div>
                     </li>
