--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -36,7 +36,7 @@
                             <a href="https://verloka.com/projects/tariscope/"><img src="../images/app/ts.jpg" alt="Tariscope" /></a>
 							<a href="https://verloka.com/projects/exchange/"><img src="../images/app/ex.jpg" alt="Exchange CMS" /></a>
                             <a href="https://jpassword.pp.ua/"><img src="../images/app/jp.jpg" alt="Jesus Password" /></a>
-                            <a href="https://changer.pp.ua/"><img src="../images/app/wc.jpg" alt="Wallpaper Changer" /></a>
+                            <a href="https://verloka.com/projects/wallpaper/"><img src="../images/app/wc.jpg" alt="Wallpaper Changer" /></a>
                             <a href="https://income.pp.ua/"><img src="../images/app/ie.jpg" alt="Income&Expenses" /></a>
 							<a href="https://verloka.com/projects/happyfarm/"><img src="../images/app/slhf.jpg" alt="Swipe Land - Happy Farm" /></a>
                         </div>
